deploy/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: school
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 8000
      name: http
  type: ClusterIP
